--- a/src/content/post/system-update-guide.mdx
+++ b/src/content/post/system-update-guide.mdx
@@ -2,7 +2,7 @@
 publishDate: 2024-04-05T00:00:00Z
 title: 'Ultimate Guide to Navigating System Updates: Enhancing Performance & Security'
 excerpt: Stay ahead in the tech-driven world with our essential guide on system updates and maintenance. Discover key insights on scheduled updates, automatic patch releases, and practical tips for minimizing disruptions. Learn how to prepare for system changes and maintain peak performance and security. Perfect for users looking to optimize their digital environment.
-image: https://unsplash.com/photos/black-and-white-laptop-computer--jCY4oEMA3o
+image: https://unsplash.com/photos/black-and-white-laptop-computer--jCY4oEMA3o?q=80&w=3540&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 category: Guides
 tags:
   - IT Support
