updates for images and new article.

--- a/src/content/post/remote-work-guide.mdx
+++ b/src/content/post/remote-work-guide.mdx
@@ -2,7 +2,7 @@
 publishDate: 2024-04-04T00:00:00Z
 title: 'Thriving Remotely: A Guide'
 excerpt: Master the art of remote work with our comprehensive guide. Learn to set up a secure and efficient home office, navigate common remote access issues, and optimize your daily workflow. This article offers practical tips for securing your internet connection, managing tasks, and maintaining a healthy work-life balance in a remote setting, ensuring you stay productive and secure in your digital workspace.
-image: https://unsplash.com/photos/macbook-pro-displaying-group-of-people-smgTvepind4?q=80&w=3540&auto=format&fit=crop&ixlib=rb-4.0.3xid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+image: https://images.unsplash.com/photo-1588196749597-9ff075ee6b5b
 category: Guides
 tags:
   - IT Support
