new articles and updates to front matter

--- a/src/content/post/it-policies-secure-practices.mdx
+++ b/src/content/post/it-policies-secure-practices.mdx
@@ -3,12 +3,12 @@ publishDate: 2024-05-14
 title: 'Effective IT Policy Management: Ensuring Compliance and Security'
 excerpt: 'Explore the essentials of IT policies and compliance in this guide, detailing secure practices like Acceptable Use Policies and data security measures to safeguard sensitive information in the tech-driven business environment.'
 image: https://images.unsplash.com/photo-1450101499163-c8848c66ca85
-category: 'Information Technology'
+category: Policy
 tags:
   - IT Compliance
   - Data Security
   - Policy Management
-  - Secure Practices
+  - Security Practices
   - Information Technology
 metadata:
   canonical: https://www.centralillinoishelpdesk.com/it-policies-secure-practices
