--- a/src/content/post/mastering-basic-troubleshooting.mdx
+++ b/src/content/post/mastering-basic-troubleshooting.mdx
@@ -5,12 +5,12 @@ excerpt: Discover essential IT troubleshooting techniques with our guide. Learn 
 image: https://images.unsplash.com/photo-1463171379579-3fdfb86d6285
 category: Tecnical Support
 tags:
-  - trouble shooting
-  - tech support
-  - problem solving
-  - hardware
-  - software
-  - diagnostics
+  - Trouble Shooting
+  - Tech Support
+  - Problem Solving
+  - Hardware
+  - Software
+  - Diagnostics
 metadata:
   canonical: https://www.centralillinoishelpdesk.com/mastering-basic-troubleshooting
 ---
