--- a/src/content/post/faqs-demystified.mdx
+++ b/src/content/post/faqs-demystified.mdx
@@ -7,7 +7,8 @@ category: Resources
 tags:
   - IT Support
   - Helpdesk
-  - CTO as a Service
+  - Knowledge Base
+  - FAQs
 metadata:
   canonical: https://www.centralillinoishelpdesk.com/faqs-demystified/
 ---
