New articles and cleaned Categories

--- a/src/content/post/mastering-basic-troubleshooting.mdx
+++ b/src/content/post/mastering-basic-troubleshooting.mdx
@@ -3,7 +3,7 @@ publishDate: 2023-04-17T00:00:00Z
 title: Mastering Basic Troubleshooting
 excerpt: Discover essential IT troubleshooting techniques with our guide. Learn systematic steps to resolve software glitches, hardware issues, and connectivity problems. Improve your IT skills for efficient problem-solving and enhanced system understanding.
 image: https://images.unsplash.com/photo-1463171379579-3fdfb86d6285
-category: Tecnical Support
+category: IT Support
 tags:
   - Trouble Shooting
   - Tech Support
@@ -14,8 +14,6 @@ tags:
 metadata:
   canonical: https://www.centralillinoishelpdesk.com/mastering-basic-troubleshooting
 ---
-
-import ToggleTheme from '~/components/common/ToggleTheme.astro';
 
 # IT Troubleshooting Guide
 
