--- a/src/content/post/mastering-google-backup.mdx
+++ b/src/content/post/mastering-google-backup.mdx
@@ -3,7 +3,7 @@ publishDate: 2024-05-04
 title: 'Securing Your Digital Life with Google`s Backup Solutions'
 excerpt: 'Explore our comprehensive guide to mastering Google Backup, offering detailed steps for safeguarding data across Google Drive, Google Photos, Google One, and more. Learn strategic backup and recovery methods to protect your digital assets effectively.'
 image: 'https://images.unsplash.com/photo-1577071835592-d5d55ffef660?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
-category: Guides
+category: Data Management
 tags:
   - Helpdesk Guides
   - Google Backup
