--- a/src/content/post/mobile-device-management.mdx
+++ b/src/content/post/mobile-device-management.mdx
@@ -3,7 +3,7 @@ publishDate: 2024-04-01
 title: 'Optimizing Mobile Device Management: Strategies for Android and Apple Devices'
 excerpt: 'Master the essentials of Mobile Device Management (MDM) with our detailed guide on secure access, device configuration, and troubleshooting for both Android and Apple products. Learn effective strategies to enhance mobile security and device management in your organization.'
 image: 'https://images.unsplash.com/photo-1526045612212-70caf35c14df?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
-category: Mobile Device Management
+category: Device Management
 tags:
   - Mobile Security
   - MDM
