--- a/src/content/post/guide-to-backups.mdx
+++ b/src/content/post/guide-to-backups.mdx
@@ -3,7 +3,7 @@ publishDate: 2024-02-15
 title: 'Protecting Your Digital Assets: A guide to small business data security'
 excerpt: 'Learn the crucial steps for securing your digital information with our comprehensive guide on data backup and recovery. Discover best practices for regular backups, the importance of redundancy, and effective recovery strategies to safeguard against data loss.'
 image: https://images.unsplash.com/photo-1597852074816-d933c7d2b988?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-category: Data Security
+category: Data Management
 tags:
   - Data Backup
   - Data Recovery
