--- a/src/content/post/it-policies-secure-practices.mdx
+++ b/src/content/post/it-policies-secure-practices.mdx
@@ -3,7 +3,7 @@ publishDate: 2024-05-14
 title: 'Effective IT Policy Management: Ensuring Compliance and Security'
 excerpt: 'Explore the essentials of IT policies and compliance in this guide, detailing secure practices like Acceptable Use Policies and data security measures to safeguard sensitive information in the tech-driven business environment.'
 image: https://images.unsplash.com/photo-1450101499163-c8848c66ca85
-category: Policy
+category: Policy Writing
 tags:
   - IT Compliance
   - Data Security
