--- a/src/content/post/reporting-issues.mdx
+++ b/src/content/post/reporting-issues.mdx
@@ -3,7 +3,7 @@ publishDate: 2024-04-28
 title: 'Effective Ticket Reporting: Key Protocols for Streamlined Helpdesk Support'
 excerpt: 'Master the art of reporting IT issues effectively with this guide, outlining crucial reporting guidelines and communication protocols. Learn how to ensure swift responses and efficient problem resolution in any IT environment.'
 image: https://images.unsplash.com/photo-1598970434795-0c54fe7c0648?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-category: Helpdesk Support
+category: IT Support
 tags:
   - IT Support
   - Issue Reporting
