--- a/src/content/post/safeguarding-your-digital-realm.mdx
+++ b/src/content/post/safeguarding-your-digital-realm.mdx
@@ -3,7 +3,7 @@ publishDate: 2023-07-19T00:00:00Z
 title: Safeguarding Your Digital Realm
 excerpt: Enhance your online safety. Learn about antivirus use, strong passwords, data encryption, and more to protect against cyber threats in our digital-first world.
 image: https://images.unsplash.com/photo-1550751827-4bd374c3f58b
-category: Cyber Security
+category: Cybersecurity
 tags:
   - Digital Security
   - Password Management
