layout fixes for stricter typing

--- a/src/content/post/cybersecurity-importance.mdx
+++ b/src/content/post/cybersecurity-importance.mdx
@@ -2,7 +2,7 @@
 publishDate: 2023-10-25
 title: 'Securing the Digital Future: The Critical Role of Cybersecurity'
 excerpt: 'Explore the vital importance of cybersecurity in safeguarding sensitive data, financial assets, and national security. Learn how robust cybersecurity measures protect against threats and foster trust in our increasingly digital world.'
-image: 'https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
+image: https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 category: Cyber Security
 tags:
   - Cybersecurity
