new content and updates to formattign

--- a/src/content/post/it-policies-secure-practices.mdx
+++ b/src/content/post/it-policies-secure-practices.mdx
@@ -14,7 +14,7 @@ metadata:
   canonical: https://www.centralillinoishelpdesk.com/it-policies-secure-practices
 ---
 
-**Navigating IT Policies and Compliance: A Guide to Secure Practices**
+## Navigating IT Policies and Compliance: A Guide to Secure Practices
 
 Adherence to policies and compliance requirements is crucial to maintaining a secure and trustworthy digital environment in the dynamic information technology landscape. This article provides an insightful overview of IT policies and compliance, clarifying acceptable use policies and data security measures that are fundamental to safeguarding sensitive information.
 
