--- a/src/content/post/it-productivity.mdx
+++ b/src/content/post/it-productivity.mdx
@@ -14,7 +14,7 @@ metadata:
   canonical: https://www.centralillinoishelpdesk.com/it-productivity
 ---
 
-**Mastering IT Tools: A Comprehensive How-To Guide for Optimal Productivity**
+## Mastering IT Tools: A Comprehensive How-To Guide for Optimal Productivity
 
 In the fast-paced world of information technology, using specific tools and applications effectively is paramount to boosting productivity and optimizing workflows. This article is a comprehensive how-to guide, offering step-by-step tutorials on using popular IT tools and applications and valuable tips for maximizing efficiency in various work environments.
 
