--- a/src/content/post/reporting-issues.mdx
+++ b/src/content/post/reporting-issues.mdx
@@ -14,7 +14,7 @@ metadata:
   canonical: https://www.centralillinoishelpdesk.com/reporting-issues
 ---
 
-**Streamlining Communication: A Guide to Reporting Issues and Notification Protocols**
+## Streamlining Communication: A Guide to Reporting Issues and Notification Protocols
 
 Effective communication is the cornerstone of a well-functioning IT environment. This article outlines essential user guidelines for reporting issues to the help desk and provides information on response times and communication channels. By following these protocols, users can ensure that their concerns are addressed promptly and efficiently.
 
